test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-multiple-generate-rules/cluster-role-binding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cpol-multiple-generate-rules
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cpol-multiple-generate-rules
subjects:
- namespace: kyverno
  kind: ServiceAccount
  name: kyverno-background-controller
