test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-multiple-generate-rules/cluster-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cpol-multiple-generate-rules
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  - secrets
  verbs:
  - create
  - update
  - delete
