test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-multiple-generate-rules/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-multiple-generate-rules
spec:
  admission: true
  background: true
  generateExisting: true
